--- a/R-session-01-intro.html
+++ b/R-session-01-intro.html
@@ -34,7 +34,7 @@
 ]
 
 .pull-right[
-&lt;img src="img/logo_SBR.png" width="50%" style="display: block; margin: auto 0 auto auto;" /&gt;
+&lt;img src="img/logo_SBR.png" width="50%" style="display: block; margin: auto;" /&gt;
 ]
 
 
@@ -919,8 +919,7 @@ my_sum(10, 20)
 
 .warning[If you write 3 times the same piece of code write a function...]
 
-???
-End of lecture one
+&gt; End of lecture one
 ---
 ## Examples of functions
 
