--- a/R-session-01-intro.html
+++ b/R-session-01-intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fundamental of Data Science for ESS</title>
+    <title>Fundamental of Data Science for EESS</title>
     <meta charset="utf-8">
     <meta name="author" content="Daniel Vaulot" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
