--- a/R-session-01-intro.html
+++ b/R-session-01-intro.html
@@ -18,7 +18,7 @@
 
 
 
-# Fundamental of Data Science for ESS
+# Fundamental of Data Science for EESS
 
 
 &lt;img src="img/course-logo.png" width="40%" style="display: block; margin: auto;" /&gt;
