--- a/R-session-02-markdown.html
+++ b/R-session-02-markdown.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fundamental of Data Science for ESS</title>
+    <title>Fundamental of Data Science for EESS</title>
     <meta charset="utf-8">
     <meta name="author" content="Daniel Vaulot" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -17,48 +17,423 @@
 
 
 
-
-# Fundamental of Data Science for ESS
+# Fundamental of Data Science for EESS
 
 
 &lt;img src="img/course-logo.png" width="40%" style="display: block; margin: auto;" /&gt;
 
 ## R session 02 - R markdown
 
-**Daniel Vaulot**
+.font120[**Daniel Vaulot**]
 
-Station Biologique de Roscoff, CNRS-Sorbonne Université
+2019-01-24
 
-Nanyang Technological University
+.pull-left[
+&lt;img src="img/NTU-Logo-full-colour.png" width="50%" style="display: block; margin: auto auto auto 0;" /&gt;
+]
 
-2019/01/24
+.pull-right[
+&lt;img src="img/logo_SBR.png" width="50%" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
 
 ---
-layout: true
 
-# Outline
+class: middle
 
----
+## Outline
 
 
 .font150[
-* What is R and why use R ?
-* Resources
-* Get started
+* What is Markown ?
+* R markdown
 * What can you do with R markdown ?
 ]
+
+---
+
+# Installation and Resources
+
+.pull-left[
+## Packages
+
+* rmarkdown (will install also knitr)
+* tinytex (Latex)
+    
+
+## Resources
+On-line Book: https://bookdown.org/yihui/rmarkdown]
+
+.pull-right[
+
+&lt;img src="img/R-markdown-book.png" width="50%" style="display: block; margin: auto;" /&gt;
+]
+
 ---
 layout: true
+background: url(img/logo-markdown.png)
 
-# Introduction
+# What is markdown ?
+
+---
+
+.center[
+&lt;img src="img/markdown-John_Gruber.jpg" width="20%" /&gt;&lt;img src="img/markdown-Aaron_Swartz.jpg" width="20%" /&gt;
+]
+
+* Created in 2004 by [John Gruber](https://en.wikipedia.org/wiki/John_Gruber) and [Aaron Swartz](https://en.wikipedia.org/wiki/Aaron_Swartz)
+
+* Goal : "to write using an easy-to-read and easy-to-write plain text format, optionally convert it to structurally valid HTML".
+
+--
+
+## Many flavors...
+
+* MultiMarkdown
+* GitHub Flavored Markdown (GFM)
+* Pandoc
+* CommonMark
+
+---
+layout: true
+# Markdown syntax
 
 ---
 
+* Quick guide: https://www.markdownguide.org/basic-syntax/
+
+## Headings
+
+
+```r
+# Heading - level 1
+
+## Heading - level 2
+```
+--
+ 
+## Heading - level 1
+ 
+### Heading - level 2
 
 ---
+
+## Paragraphs
+
+
+```r
+Paragraphs are separated
+by a blank line.
+
+Two spaces at the end of a line  
+produces a line break.
+```
+--
+
+Paragraphs are separated
+by a blank line.
+
+Two spaces at the end of a line  
+produces a line break.
+
+---
+
+## Formatting
+
+
+```r
+_italic_, *italic*, **bold**, `monospace`.
+```
+
+--
+
+_italic_, *italic*, **bold**, `monospace`.
+
+.warning[Do not mix straight and backward quotes]
+
+---
+
+## Bullet lists
+  
+
+```r
+Bullet list:
+
+  * apples
+  * oranges
+  * pears
+      * passe crassane (4 spaces to indent)
+```
+
+--
+
+* apples
+* oranges
+* pears
+    * passe crassane
+
+---
+
+## Numbered lists
+
+
+```r
+Numbered list:
+
+1. wash
+1. rinse
+1. repeat
+```
+--
+
+1. wash
+1. rinse
+1. repeat
+
+---
+
+## Hyperlinks
+    
+
+```r
+  [Text of the link](URL of the link)
+
+# Example
+  [Markdown syntax](https://www.markdownguide.org/basic-syntax/)
+```
+
+--
+
+  [Markdown syntax](https://www.markdownguide.org/basic-syntax/)
+
+---
+
+## Images
+
+
+```r
+  ![Image name](URL of the link - can also be a local file on your computer)
+
+# Example
+  ![](https://i.pinimg.com/originals/1c/b7/24/1cb724b545de717ed0430e9d46e78eea.jpg)
+```
+
+--
+
+ ![](https://i.pinimg.com/originals/1c/b7/24/1cb724b545de717ed0430e9d46e78eea.jpg)
+
+---
+
+## Tables
+
+
+```r
+ID | First | Last
+--- | --- | ---
+1 | Donald | Trump
+```
+
+--
+
+ID | First | Last
+--- | --- | ---
+1 | Donald | Trump
+
+---
+layout: false
+
+# Conversion
+
+* [Pandoc](https://pandoc.org/) : command line tool
+* Converts from **md** to **pdf**, **html**, **docx**...
+
+
+```r
+# HTML
+&gt; pandoc test1.md -f markdown -t html -s -o test1.html
+
+# pdf
+&gt; pandoc test1.md -s -o test1.pdf
+```
+
+
+&lt;img src="img/pandoc.png" width="70%" style="display: block; margin: auto auto auto 0;" /&gt;
+
+---
+
+layout: true
+
+# Rmarkdown
+
+---
+
+&lt;img src="img/package-rmarkdown-flow.png" width="70%" /&gt;
+
+## Mix
+
+* Markdown
+    - paragraph structure
+    - comments
+    - links
+
+* R code ("chunks")
+
+* Output of R code
+
+---
+
+## Flow
+
+&lt;img src="img/R-markdown-flow.png" width="70%" style="display: block; margin: auto;" /&gt;
+
+--
+
+&lt;img src="img/package-knitr-logo.png" width="10%" style="display: block; margin: auto auto auto 0;" /&gt;
+* [knitr](https://yihui.name/knitr/)  
+
+
+---
+
+layout: true
+
+# Your first Rmarkdown file
+
+---
+.student[Who has not been able to install Rmarkdown and Latex ?]
+
+--
+
+&lt;img src="img/package-rmarkdown-new-01.png" width="40%" /&gt;&lt;img src="img/package-rmarkdown-new-02.png" width="40%" /&gt;
+
+---
+
+## Knit to HTML
+
+&lt;img src="img/package-rmarkdown-knit.png" width="80%" /&gt;
+
+.warning[Save to "xxx.Rmd"]
+
+---
+
+&lt;img src="img/package-rmarkdown-HTML.png" width="100%" /&gt;
+
+---
+
+## Knit of pdf
+
+&lt;img src="img/package-rmarkdown-knit-pdf.png" width="40%" /&gt;
+
+---
+&lt;img src="img/package-rmarkdown-pdf-output.png" width="100%" /&gt;
+
+
+---
+
+layout: true
+
+# The Rmarkdown file
+
+---
+
+## File structure
+
+&lt;img src="img/package-rmarkdown-structure.png" width="100%" /&gt;
+
+---
+
+## Knit process
+
+&lt;img src="img/package-rmarkdown-md-window.png" width="100%" /&gt;
+
+
+---
+
+## Output
+
+&lt;img src="img/package-rmarkdown-output.png" width="100%" /&gt;
+
+---
+
+layout: true
+
+# Chunks
+
+---
+
+## Insert chunk
+
+&lt;img src="img/package-rmarkdown-chunk-01.png" width="100%" /&gt;
+
+---
+
+## Options
+
+&lt;img src="img/package-rmarkdown-chunk-options.png" width="100%" /&gt;
+
+---
+
+## Useful options
+
+
+Options | Default value | Aim
+--- | --- | ---
+echo | TRUE | Print code (= FALSE in a report for example)
+eval | TRUE | Evaluate code (= FALSE if want to show code only)
+warning  | TRUE | Warning message (= FALSE to remove long warnings)
+message  | TRUE | Messages (= FALSE to remove long messages)
+cache   | FALSE | If TRUE only modified chunks will be evaluated
+   |  |  very useful for computing heavy codes
+fig.height  |  |  inches
+fig.width  |  |  inches
+
+---
+
+## Set defaults options
+
+* Insert in a R chunk at the beginning of your Rmarkdownn file
+
+
+```r
+knitr::opts_chunk$set(fig.width = 6, fig.height = 6, eval = TRUE, cache = TRUE, 
+    echo = TRUE, )
+```
+
+
+---
+
 layout: true
 
 # What can you do with Rmarkdown ?
+
+---
+## Presentation
+
+.left-column[
+&lt;img src="img/package-xaringan-logo.png" width="45%" /&gt;
+
+]
+
+.right-column[
+
+https://github.com/yihui/xaringan
+ 
+&lt;img src="img/package-xaringan-example.png" width="80%" /&gt;
+]
+
+
+---
+## Posters
+
+.left-column[
+&lt;img src="img/package-posterdown-logo.png" width="45%" /&gt;
+
+]
+
+.right-column[
+
+https://github.com/brentthorne/posterdown
+ 
+&lt;img src="img/package-posterdown-example.png" width="80%" /&gt;
+]
 
 ---
 ## Curriculum vitae
@@ -74,20 +449,20 @@ https://cloud.r-project.org/web/packages/vitae/index.html
  
 &lt;img src="img/package-vitae-example-02.png" width="90%" /&gt;
 ]
-
 ---
-## Posters
+
+## Website
 
 .left-column[
-&lt;img src="img/package-posterdown-logo.png" width="45%" /&gt;
+&lt;img src="img/package-blogdown-logo.png" width="45%" /&gt;
 
 ]
 
 .right-column[
 
-https://github.com/brentthorne/posterdown
+https://bookdown.org/yihui/blogdown/
  
-&lt;img src="img/package-posterdown-example.png" width="80%" /&gt;
+&lt;img src="img/web-site-dv.png" width="90%" style="display: block; margin: auto;" /&gt;
 ]
     </textarea>
 <script src="libs/remark-latest.min.js"></script>
